[tool.poetry]
name = "pytorch-tutorial"
version = "0.1.0"
description = "Tutorial code for Pytorch"
authors = ["Arpan Majumdar"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
torch = "^2.2.2"
torchvision = "^0.17.2"
torchtext = "^0.17.2"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
